--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,8 @@ dependencies:
  firefirestyle.httprequest:
     git:
       url: https://github.com/firefirestyle/dart.httprequest.git
+# firefirestyle.httprequest:
+#    path: ../dart.httprequest
  firefirestyle.miniprop:
    git:
      url: https://github.com/firefirestyle/dart.miniprop.git
